# eCounslutantion-Ai-Dashboard

./: README.md  mca_intent_dataset_850.csv
econsult_prototype_v2/: .gitignore  QUICK_START.md  README.md  SIMPLE_START.md  START_HERE.bat  TROUBLESHOOTING.md  ZIP_CONTENTS.md  check_requirements.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.py  run.sh  setup.py  setup_and_run.py  start.sh
econsult_prototype_v2/backend/: __init__.py  app.py  config.py  database.py  frontend.py  main.py  models.py  routes.py  services.py  utils.py
econsult_prototype_v2/backend/static/: wordcloud_map.json
econsult_prototype_v2/frontend/: README.txt  index.html
econsult_prototype_v2/frontend/static/css/: dashboard.css
econsult_prototype_v2/frontend/static/js/: dashboard.js
econsult_prototype_v2/tests/: test_api.py  test_utils.py
